# tower-defense-2d

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  game_log.txt
.github/actions/install-packages/: action.yml
.github/actions/process-artifacts/: action.yml
.github/actions/runtime-checks/: action.yml
.github/workflows/: ci.yml  cmake.yml
2D_GameEngine/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.h  Level.cpp  Level.hpp  Logger.cpp  Logger.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.h  main.cpp
2D_GameEngine/headers/: Effect.h  EnemyFactory.h  Game.hpp  GameObject.h  IDamageable.h  Level.hpp  Logger.hpp  Map.hpp  Matrix2D.hpp  TowerFactory.h  Towers.h  Utils.hpp
2D_GameEngine/src/: Effect.cpp  Game.cpp  GameObject.cpp  Level.cpp  Logger.cpp  Map.cpp  main.cpp
assets/: manual.txt
cmake/: Dependencies.cmake  Options.cmake  SDL3Config.cmake  SDL3_imageConfig.cmake  sdl3-config.cmake  sdl3_image-config.cmake
lib/SDL3/SDL3.framework/Versions/A/Resources/: Info.plist
lib/SDL3/SDL3.framework/Versions/A/_CodeSignature/: CodeResources
lib/SDL3/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/aarch64/: SDL3.yml
lib/SDL3/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/x86_64/: SDL3.yml
scripts/: build_cppcheck.sh  run_cppcheck.sh  run_valgrind.sh
